[package]
name = "littertray"
version = "0.1.0"
authors = ["Ross Younger <crazyscot@gmail.com>"]
description = "Lightweight sandboxing for tests that write to the filesystem"
readme = "README.md"
keywords = ["test", "sandbox"]
license = "MIT OR Apache-2.0"
categories = ["development-tools", "filesystem"]
repository = "https://github.com/crazyscot/littertray/"
# async closures (LitterTray::try_with_async) require 1.85; std::fs:exists requires 1.81
rust-version = "1.81.0"
edition = "2021"

[features]
## Enables support for async closures with the tokio runtime.
## This feature requires rust 1.85.
async = ["dep:tokio"]

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.0"
document-features = "0.2.11"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { optional = true, version = "1.45.0", features = ["sync"] }

[dev-dependencies]
rusty-fork = "0.3.0"
tokio = { version = "1.45.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }

[lints.rust]
dead_code = "warn"
elided_lifetimes_in_paths = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
# unused_crate_dependencies = "deny" # false positives
unused_extern_crates = "deny"
unused_lifetimes = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
unescaped_backticks = "deny"

[build-dependencies]
rustversion = "1.0.21"
